--- a/metal/roles/k3s/templates/k3s.service.j2
+++ b/metal/roles/k3s/templates/k3s.service.j2
@@ -17,6 +17,8 @@ ExecStart=/usr/local/bin/k3s {{ 'server' if 'kube_control_plane' in group_names 
 {% for item in k3s_kubelet_extra_args %}
   --kubelet-arg "{{ item }}" \
 {% endfor %}
+  --flannel-backend=none \
+  --no-flannel \
   --kubelet-arg "node-status-update-frequency=4s" \
   --kubelet-arg "container-log-max-size=1Mi" \
   --kubelet-arg "container-log-max-files=2"
