--- a/metal/roles/k3s/templates/k3s.service.j2
+++ b/metal/roles/k3s/templates/k3s.service.j2
@@ -13,12 +13,12 @@ ExecStart=/usr/local/bin/k3s {{ 'server' if 'kube_control_plane' in group_names 
   --kube-controller-manager-arg "node-monitor-grace-period=40s" \
   --kube-apiserver-arg "default-not-ready-toleration-seconds=300" \
   --kube-apiserver-arg "default-unreachable-toleration-seconds=300" \
+  --flannel-backend=none \
 {% endif %}
 {% for item in k3s_kubelet_extra_args %}
   --kubelet-arg "{{ item }}" \
 {% endfor %}
-  --flannel-backend=none \
-  --no-flannel \
+  --disable-kube-proxy \
   --kubelet-arg "node-status-update-frequency=4s" \
   --kubelet-arg "container-log-max-size=1Mi" \
   --kubelet-arg "container-log-max-files=2"
