metal: Refactor to support prusik config

--- a/metal/roles/setup/templates/postfix_main.cf.j2
+++ b/metal/roles/setup/templates/postfix_main.cf.j2
@@ -34,7 +34,7 @@ smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
 
 
 smtpd_relay_restrictions = permit_mynetworks permit_sasl_authenticated defer_unauth_destination
-myhostname = grigri.grigri
+myhostname = {{ ansible_host }}.grigri
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 myorigin = /etc/mailname
