--- a/metal/roles/k3s/templates/k3s.service.j2
+++ b/metal/roles/k3s/templates/k3s.service.j2
@@ -21,7 +21,8 @@ ExecStart=/usr/local/bin/k3s {{ 'server' if 'kube_control_plane' in group_names 
 {% endfor %}
   --kubelet-arg "node-status-update-frequency=4s" \
   --kubelet-arg "container-log-max-size=1Mi" \
-  --kubelet-arg "container-log-max-files=2"
+  --kubelet-arg "container-log-max-files=2" \
+  --kubelet-arg "max-pods=250"
 KillMode=process
 Delegate=yes
 # Having non-zero Limit*s causes performance problems due to accounting overhead
